--- a/src/frontend/components/Messages/Messages.css
+++ b/src/frontend/components/Messages/Messages.css
@@ -1,3 +1,23 @@
-.messages ul {
+.messages {
+    display: flex;
+    flex-direction: column;
+}
+
+.messages .messages-header {
+    border-bottom: solid 1px #000;
+    font-weight: bold;
+    text-align: center;
+}
+
+.messages .messages-container {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
+    overflow: auto;
+}
+
+.messages .message {
+    display: flex;
+    border-bottom: dashed 1px #000;
+    font-style: italic;
 }
