--- a/src/frontend/components/Player/Player.css
+++ b/src/frontend/components/Player/Player.css
@@ -1,4 +1,17 @@
 .Player {
     display: flex;
-    border: solid 1px #000;
+    flex-direction: column;
+    overflow: hidden;
+    border-right: dashed 1px #000;
+    padding: 5px;
+}
+
+.Player .player-header {
+    border-bottom: dashed 1px #000;
+    text-align: center;
+    font-weight: bold;
+}
+
+.Player .player-container {
+    display: flex;
 }
