--- a/src/frontend/components/GameWindow/GameWindow.css
+++ b/src/frontend/components/GameWindow/GameWindow.css
@@ -7,7 +7,19 @@
 
 .gameWindow .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     overflow: hidden;
     border: solid 1px #000;
+}
+
+.gameWindow .stats-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.gameWindow .elapsedTime {
+    display: flex;
+    justify-content: center;
+    border-bottom: solid 1px;
 }
