--- a/src/frontend/components/Messages/Messages.css
+++ b/src/frontend/components/Messages/Messages.css
@@ -4,7 +4,7 @@
 }
 
 .messages .messages-header {
-    border-bottom: solid 1px #000;
+    border-bottom: dashed 1px #000;
     font-weight: bold;
     text-align: center;
 }
