--- a/src/frontend/components/Resources/Resources.css
+++ b/src/frontend/components/Resources/Resources.css
@@ -7,6 +7,7 @@
 .resources .resources-header {
     text-align: center;
     font-weight: bold;
+    border-bottom: dashed 1px;
 }
 
 .resources .resources-container {
